脚本改的有问题，把gc打印相关的配置删除掉